--- a/src/htdocs/css/features/_aftershocks.scss
+++ b/src/htdocs/css/features/_aftershocks.scss
@@ -1,3 +1,6 @@
+@use 'sass:color';
+@use '../variables' as *;
+
 #summaryPane {
   .probabilities {
     display: flex;
@@ -8,52 +11,56 @@
       border-radius: 3px;
       color: $text-color;
       display: block;
-      margin-right: 1em;
+      margin-right: 1rem;
       text-align: center;
       text-decoration: none;
-      transition: all .35s ease-out;
-      width: 6em;
+      transition: all $hover-off-duration ease-in;
+      width: 6rem;
+
+      &:hover {
+        border-color: color.scale($accent-color, $whiteness: 50%);
+        color: $accent-color;
+        transition: all $hover-on-duration ease-out;
+
+        abbr {
+          border-color: color.scale($accent-color, $whiteness: 60%);
+          color: color.scale($accent-color, $whiteness: 40%);
+          transition: all $hover-on-duration ease-out;
+        }
+
+        h4 {
+          background: $accent-color-lightest;
+          transition: background $hover-on-duration ease-out;
+        }
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
 
       abbr {
         color: $text-color-lightest;
-        font-size: .8em;
+        font-size: .8rem;
         display: inline-block;
         margin-top: 5px;
-        transition: color .35s ease-out;
+        transition: all $hover-off-duration ease-in;
       }
+
       h4 {
         background: $bg-color-darker;
         border-radius: 3px 3px 0 0;
-        margin: 0;
         padding: 4px 0;
-        transition: background .35s ease-out;
+        transition: background $hover-off-duration ease-in;
       }
+
       ul {
         list-style: none;
-        margin: .75em 0 1em;
+        margin: .75rem 0 1rem;
         padding: 0;
       }
 
       .probability {
-        font: 1.25em $font-family-mmi;
-      }
-
-      &:hover {
-        border-color: scale-color($accent-color, $whiteness: 50%);
-        color: $accent-color;
-        transition-duration: 0s;
-
-        abbr {
-          color: scale-color($accent-color, $whiteness: 40%);
-          border-color: scale-color($accent-color, $whiteness: 40%);
-          transition-duration: 0s;
-        }
-        h4 {
-          background: $accent-color-lightest;
-        }
-      }
-      &:last-child {
-        margin-right: 0;
+        font: 1.25rem $font-family-mmi;
       }
     }
   }
