--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -1,51 +1,53 @@
+@use 'variables' as *;
+
 #editPane {
+  dl {
+    margin-bottom: 0;
+  }
+
+  fieldset {
+    border: 1px solid $border-color;
+    border-radius: 4px;
+    margin-top: 1rem;
+    padding: 0 1.75rem 2rem;
+
+    &.buttons {
+      border: 0;
+      margin: 0 0 0 3px;
+      padding: 0;
+      width: 100%;
+    }
+
+    &:first-child {
+      margin-right: 1rem;
+    }
+  }
+
   form {
     display: flex;
     flex-flow: row wrap;
 
-    dl {
-      margin-bottom: 0;
-    }
-
-    fieldset {
-      border: 1px solid $border-color;
-      border-radius: 4px;
-      margin-top: 1em;
-      padding: 0 1.75em 2em;
-
-      &:first-child {
-        margin-right: 1em;
-      }
-
-      &.buttons {
-        border: 0;
-        margin: 0 0 0 3px;
-        padding: 0;
-        width: 100%;
-      }
-    }
-
-    h3 {
-      margin: 2.5rem 0 .5rem;
-    }
-
-    legend {
-      color: $text-color-lightest;
-      font-size: .8em;
-      letter-spacing: 1px;
-      margin-left: -1.25em;
-      text-transform: uppercase;
-    }
-
-    legend + div {
-      margin-top: -1em;
-    }
-
     p {
       color: $text-color-lighter;
       font-weight: 300;
-      letter-spacing: .015em;
+      letter-spacing: .015rem;
       margin: .75rem 0 .25rem;
+    }
+  }
+
+  h3 {
+    margin: 2.5rem 0 .5rem;
+  }
+
+  legend {
+    color: $text-color-lightest;
+    font-size: .8rem;
+    letter-spacing: 1px;
+    margin-left: -1rem;
+    text-transform: uppercase;
+
+    + div {
+      margin-top: -1rem;
     }
   }
 
@@ -53,15 +55,19 @@
     margin: 0;
   }
 
+  .darker {
+    background: $bg-color-darker;
+  }
+
   .details {
+    margin-top: 1.25rem;
     max-height: 250px;
-    margin-top: 1.25em;
     overflow: hidden;
-    transition: max-height .35s ease-out;
+    transition: max-height .3s ease-out;
 
     &.hide {
       max-height: 0;
-      transition: max-height .35s cubic-bezier(0, 1.05, 0, 1);
+      transition: max-height .1s ease-in;
     }
   }
 
