--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -1,19 +1,22 @@
+@use 'variables' as *;
+
 #helpPane {
   h3 {
     display: block;
   }
 
-  ol, ul {
+  ol,
+  ul {
     list-style: none;
     margin: 0;
     padding: 0;
   }
 
   .column {
-    padding-right: 2em;
+    padding-right: 2rem;
 
     &:last-child {
-      padding-right: 1em;
+      padding-right: 1rem;
     }
   }
 
@@ -28,12 +31,12 @@
   }
 
   .find {
-    margin-top: -.5em;
+    margin-top: .5rem;
   }
 
   .github {
     border-top: 1px solid $border-color-lighter;
-    margin: 2em 0 0;
+    margin: 2rem 0 0;
     padding-top: 4px;
   }
 
@@ -42,7 +45,7 @@
 
     > li {
       counter-increment: item;
-      margin: 2em 0;
+      margin: 2rem 0;
       padding-left: 33px;
       position: relative;
 
@@ -60,11 +63,12 @@
         top: 0;
         width: 25px;
       }
+
       &:first-child {
-        margin-top: 1em;
+        margin-top: 1rem;
       }
       &:last-child {
-        margin-bottom: 1em;
+        margin-bottom: 1rem;
       }
     }
   }
@@ -73,7 +77,7 @@
     flex: 2 0 50%;
 
     h3 {
-      font-size: 1.25em;
+      font-size: 1.25rem;
       line-height: 1.4;
       margin: 0;
     }
@@ -86,12 +90,12 @@
   .legend {
     flex: 1 0 20%;
     font-family: $font-family-headers;
-    max-width: 22em;
-    min-width: 18em;
+    max-width: 22rem;
+    min-width: 18rem;
 
     h2 + ul > li {
       border-top: 1px solid $border-color-lighter;
-      padding: 0.5em 0;
+      padding: 0.5rem 0;
 
       &:first-child {
         border: none;
@@ -100,7 +104,7 @@
     }
 
     img {
-      margin: 0.3em .2em;
+      margin: 0.3rem .2rem;
       max-width: 100%;
     }
 
@@ -110,14 +114,16 @@
       justify-content: space-between;
     }
 
+    .aftershocks,
+    .magnitude,
+    .intensity {
+      display: block;
+    }
+
     .aftershocks {
       ul {
         color: $text-color-lighter;
       }
-    }
-
-    .aftershocks, .magnitude, .intensity {
-      display: block;
     }
 
     .fieldnotes {
@@ -136,20 +142,19 @@
       align-items: center;
       color: $text-color-lighter;
       display: flex;
-      font-size: .9em;
+      font-size: .9rem;
       justify-content: space-around;
-      margin: .25em 0;
+      margin: .25rem 0;
 
-      &:before {
-        content: '0';
-        margin-right: .5em;
-      }
       &:after {
         content: '7';
-        margin-left: .5em;
+        margin-left: .5rem;
+      }
+      &:before {
+        content: '0';
+        margin-right: .5rem;
       }
     }
-
   }
 
   .navbutton {
