--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -1,21 +1,19 @@
-@import 'mappane/_control-bottomCenter.scss';
-@import 'mappane/_mousePosition.scss';
-
 #mapPane,
 .map {
   height: 100%;
 }
 
 #mapPane {
+  padding: 0;
+
   canvas {
     width: 40px;
   }
-  /* hide rendered beachballs not turned on in layer controller */
-  > canvas {
+  > canvas { /* beachball that is turned off in layer controller */
     display: none;
   }
 
-  .spinner {
+  .breather { /* loader */
     width: 1.5em;
 
     div {
@@ -24,169 +22,4 @@
       width: .9em;
     }
   }
-}
-
-/* Rendering order of features
-  (all but faults rendered in leaflet-overlay-pane which has a z-index of 400) */
-.leaflet-focal-mechanism-pane {
-  z-index: 425;
-}
-.leaflet-moment-tensor-pane {
-  z-index: 424;
-}
-.leaflet-mainshock-pane {
-  z-index: 423;
-}
-.leaflet-aftershocks-pane {
-  z-index: 422;
-}
-.leaflet-foreshocks-pane {
-  z-index: 421;
-}
-.leaflet-historical-pane {
-  z-index: 420;
-}
-.leaflet-shakemap-stations-pane {
-  z-index: 419;
-}
-.leaflet-fieldnotes-pane {
-  z-index: 418;
-}
-.leaflet-faults-pane {
-  z-index: 417;
-}
-
-/* Match popup font-size, link colors to rest of app */
-.leaflet-container {
-  font-size: $font-size;
-
-  a {
-    color: $link-color;
-  }
-}
-
-.leaflet-control-container {
-  .leaflet-control-attribution {
-    background-color: rgba(255, 255, 255, .5);
-    color: #666;
-    max-width: 300px;
-    overflow: hidden; /* Quell long attributions */
-    text-overflow: ellipsis;
-    white-space: nowrap;
-
-    a {
-      color: #666 !important;
-    }
-
-    &:hover {
-      color: $text-color;
-
-      a {
-        color: $text-color !important;
-      }
-    }
-  }
-  .leaflet-control-layers,
-  .leaflet-bar {
-    border: 1px solid $link-color;
-    box-shadow: none;
-  }
-  .leaflet-control-layers,
-  .leaflet-bar a {
-    background: rgba(249, 245, 255, 0.75);
-  }
-  .leaflet-bar a {
-    color: $link-color;
-
-    &:first-child {
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-      border-bottom-color: #cabede;
-    }
-    &:hover {
-      background: rgba(255, 255, 255, 0.75);
-    }
-    &:last-child {
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px;
-    }
-  }
-  .leaflet-control-layers-expanded {
-    background: #fff;
-    padding: 6px 10px;
-  }
-  .leaflet-control-layers-overlays {
-    div > span {
-      align-items: baseline;
-      display: flex;
-    }
-
-    .count {
-      font-size: .9em;
-    }
-  }
-  .leaflet-control-layers-separator {
-    border-top-color: #cabede;
-    margin: 5px -10px;
-  }
-}
-
-/* Form controls */
-.leaflet-control-layers {
-  font-family: $font-family-headers;
-
-  label {
-    cursor: pointer;
-    line-height: 1.3;
-    margin: 6px 0;
-
-    span {
-      align-items: center;
-      display: flex;
-    }
-  }
-}
-
-/* Use accent color for Leaflet layers toggle control */
-.leaflet-control-layers-toggle {
-  background-image: url(../img/layers.png) !important;
-}
-.leaflet-retina .leaflet-control-layers-toggle {
-  background-image: url(../img/layers@2x.png) !important;
-}
-
-/* Hide zoom controls on mobile device (which has pinch-to-zoom gestures) */
-.leaflet-control-zoom .hide {
-  display: none;
-}
-
-/* Prevent text from wrapping */
-.leaflet-popup-content {
-  [datetime] {
-    min-width: 20em;
-  }
-}
-
-/* Push top controls down to accommodate toolbar */
-.leaflet-top .leaflet-control {
-  margin-top: 50px;
-}
-
-/* Scroll wide tables in Leaflet popups elegantly */
-.scroll-wrapper {
-  overflow: auto;
-
-  th.freeze {
-    background: white;
-    left: 0;
-    position: sticky;
-  }
-}
-
-/* Hide attribution text on (small screen) mobile devices */
-@media only screen
-  and (max-width: $breakpoint-tablet-width) {
-    .leaflet-control-attribution {
-      display: none;
-    }
 }
