--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,22 +1,20 @@
+@use 'variables' as *;
+
 #summaryPane {
   h2 + p {
     margin-bottom: 2rem;
   }
 
   h3 {
-    margin: 1.5em 0 .5em;
+    margin-top: 2.25rem;
 
     .mag {
       margin-left: .25em; /* account for collapse of whitespace by display:flex */
     }
   }
 
-  h4 {
-    margin-bottom: 0;
-  }
-
   time.updated {
-    margin: 0 1em;
+    margin: 0 1rem;
     position: absolute;
     right: 0;
     top: 3rem;
@@ -39,63 +37,18 @@
   .historical {
     order: 3;
   }
-
-  .feature {
-    width: 100%;
-  }
-
-  .features {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .mmiI {
-    border-color: $border-color-lighter !important; /* add subtle grey border so it shows up */
-  }
-  .mmiII {
-    border-color: $mmiII-color !important;
-  }
-  .mmiIII {
-    border-color: $mmiIII-color !important;
-  }
-  .mmiIV {
-    border-color: $mmiIV-color !important;
-  }
-  .mmiV {
-    border-color: $mmiV-color !important;
-  }
-  .mmiVI {
-    border-color: $mmiVI-color !important;
-  }
-  .mmiVII {
-    border-color: $mmiVII-color !important;
-  }
-  .mmiVIII {
-    border-color: $mmiVIII-color !important;
-  }
-  .mmiIX {
-    border-color: $mmiIX-color !important;
-  }
-  .mmiX {
-    border-color: $mmiX-color !important;
-  }
-  .mmiXI {
-    border-color: $mmiXI-color !important;
-  }
-  .mmiXII {
-    border-color: $mmiXII-color !important;
-  }
 }
 
 @media only screen
 and (max-width: $breakpoint-phone-width) {
   #summaryPane {
     td {
-      padding-left: .5em;
-      padding-right: .5em;
+      padding-left: .5rem;
+      padding-right: .5rem;
     }
 
-    .eqid, .location {
+    .eqid,
+    .location {
       display: none;
     }
   }
