--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -21,7 +21,7 @@
   > a,
   > span {
     background-color: #fff;
-    border-radius: 3px;
+    border-radius: $button-border-radius;
     box-shadow: inset 0 0 1px rgba(0, 0, 0, .5);
     color: $text-color-darker !important;
     display: block;
