--- a/src/htdocs/css/util/_controls.scss
+++ b/src/htdocs/css/util/_controls.scss
@@ -36,7 +36,7 @@ button {
   appearance: button;
   background-color: $accent-color;
   border: 1px solid color.scale($accent-color, $blackness: 15%);
-  border-radius: 4px;
+  border-radius: $button-border-radius;
   color: #fff;
   cursor: pointer;
   display: inline-block;
@@ -137,7 +137,7 @@ input[type="radio"]:checked + span:before {
 input[type="text"],
 input[type="number"] {
   border: 1px solid $border-color-lighter;
-  border-radius: 4px;
+  border-radius: $button-border-radius;
   box-shadow: inset 0 1px 4px 0 hsla(0, 0%, 0%, .08);
   font-size: .9rem;
   margin: 0 1px 3px 0;
