move tablesort @use to index

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -10,6 +10,7 @@
 @use 'plotsPane';
 @use 'statusBar';
 @use 'summaryPane';
+@use 'tablesort/src/tablesort.css';
 @use 'util';
 @use 'variables' as *;
 
