use tablesort scss file

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -10,7 +10,7 @@
 @use 'plotsPane';
 @use 'statusBar';
 @use 'summaryPane';
-@use 'tablesort/src/tablesort.css';
+@use 'tablesort/src/tablesort';
 @use 'util';
 @use 'variables' as *;
 
