--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -122,6 +122,7 @@ th {
 
 th {
   font: 700 .95rem $font-family-headers;
+  padding-bottom: .3rem;
   text-align: center;
   text-transform: uppercase;
 }
