--- a/src/htdocs/css/util/_controls.scss
+++ b/src/htdocs/css/util/_controls.scss
@@ -33,47 +33,49 @@ $dist: $track-w - $thumb-d;
 --------------------------------------------- */
 
 button {
-  appearance: button;
-  background-color: $accent-color;
-  border: 1px solid color.scale($accent-color, $blackness: 15%);
+  appearance: none;
+  background: $bg-color;
+  border: 1px solid $accent-color;
   border-radius: $button-border-radius;
-  color: #fff;
+  color: $accent-color;
   cursor: pointer;
-  display: inline-block;
-  font: 400 1rem $font-family-headers;
+  font: 700 1.1rem $font-family-headers;
   margin-top: 1.5rem;
-  padding: 6px 12px;
+  padding: 5px 12px;
   text-align: center;
-  text-shadow: 1px 1px 3px #444;
   text-transform: uppercase;
   transition: all $hover-off-duration ease-in;
   user-select: none;
-  vertical-align: middle;
   white-space: nowrap;
 
   &.reset {
-    background-color: $reset-button-color;
+    background: $reset-button-color;
     border-color: color.scale($reset-button-color, $blackness: 15%);
     color: $text-color-lighter;
-    text-shadow: 1px 1px 3px #ddd;
 
     &:active,
     &:focus,
     &:hover {
-      background-color: color.scale($reset-button-color, $lightness: 40%);
+      background: color.scale($reset-button-color, $lightness: 40%);
       border-color: color.scale($reset-button-color, $blackness: 25%);
-      transition: all $hover-on-duration ease-out;
+      color: $text-color;
+      text-shadow: none;
+    }
+    &:active {
+      box-shadow: inset 0 1px 5px rgba(0, 0, 0, .1);
     }
   }
 
   &:active,
   &:focus,
   &:hover {
-    background-color: color.scale($accent-color, $blackness: 15%);
-    border-color: color.scale($accent-color, $blackness: 15%);
+    background: $accent-color;
+    color: #fff;
+    text-shadow: 1px 1px 3px #444;
+    transition: all $hover-on-duration ease-out;
   }
   &:active {
-    box-shadow: inset 0 3px 8px rgba(0, 0, 0, .175);
+    box-shadow: inset 0 3px 8px rgba(0, 0, 0, .35);
     outline: 0;
   }
   &:focus {
@@ -81,9 +83,12 @@ button {
   }
 
   &[disabled] {
+    background: $bg-color;
     box-shadow: none;
+    color: $accent-color;
     cursor: not-allowed;
     opacity: .3;
+    text-shadow: none;
   }
 }
 
