--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -4,6 +4,7 @@ $breakpoint-phone-width: 735px;
 $breakpoint-tablet-width: 1023px;
 
 $button-border-radius: 4px;
+$button-text-shadow: 1px 1px 3px #444;
 
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-headers: 'Open Sans', sans-serif;
