--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -28,7 +28,7 @@
     }
 
     &.selected {
-      background-color: $link-color;
+      background-color: $accent-color;
       color: #fff;
       text-shadow: $button-text-shadow;
     }
