--- a/src/htdocs/css/util/_controls.scss
+++ b/src/htdocs/css/util/_controls.scss
@@ -105,21 +105,21 @@ input[type="radio"] {
     border: 1px solid #888;
     content: '\00a0';
     display: flex;
-    font: 14px/1 'Arial Unicode MS';
-    height: 16px;
+    font: 1rem/1 'Arial Unicode MS';
+    height: 1rem;
     justify-content: center;
-    margin-right: 8px;
+    margin-right: .5rem;
     position: relative;
     text-shadow: $button-text-shadow;
     top: 0px;
-    width: 16px;
+    width: 1rem;
   }
 }
 input[type="checkbox"] + span:before {
   border-radius: 3px;
 }
 input[type="radio"] + span:before {
-  border-radius: 8px;
+  border-radius: 50%;
   font-size: 10px;
 }
 
