--- a/src/htdocs/css/util/_lightbox.scss
+++ b/src/htdocs/css/util/_lightbox.scss
@@ -1,3 +1,5 @@
+@use '../variables' as *;
+
 .lightbox {
   background: rgba(0, 0, 0, .9);
   bottom: 0;
@@ -35,10 +37,16 @@
     right: 10px;
     text-align: center;
     top: 10px;
+    transition: background $hover-off-duration ease-in;
     width: 25px;
   }
 
   &:hover:after {
+    background: #eee;
+    transition: background $hover-on-duration ease-out;
+  }
+  &:active:after {
     background: #fff;
+    transition: background .05s ease-out;
   }
 }
