--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -41,6 +41,7 @@
       &.period {
         border-bottom: 1px solid $border-color-lighter;
         font-weight: 400;
+        padding-right: 2px;
         text-align: right;
       }
 
@@ -72,7 +73,7 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
-    margin: 1rem 0 0;
+    margin-top: -.5rem;
 
     label {
       margin-left: 1rem;
